added inventory module
